relatorios/202120593/T3/cppcheck.txt
t3.cpp:246:45: style: Condition 'cursor_x>slant.size()' is always true [knownConditionTrueFalse]
                                if(cursor_x > slant.size()) {
                                            ^
t3.cpp:181:33: error: Memory leak: lant [memleak]
                                lant = nullptr;
                                ^
t3.cpp:607:32: style: Redundant initialization for 'it'. The initialized value is overwritten before it is read. [redundantInitialization]
                for (n = 0, it = linhas.begin();
                               ^
t3.cpp:603:25: note: it is initialized
                auto it = linhas.begin();
                        ^
t3.cpp:607:32: note: it is overwritten
                for (n = 0, it = linhas.begin();
                               ^
t3.cpp:49:23: style: The scope of the variable 'vetor' can be reduced. [variableScope]
                char *vetor;
                      ^
t3.cpp:472:30: style: The scope of the variable 'j' can be reduced. [variableScope]
                unsigned int j = 0, contcima = 0, contbai = 0;
                             ^
t3.cpp:472:37: style: The scope of the variable 'contcima' can be reduced. [variableScope]
                unsigned int j = 0, contcima = 0, contbai = 0;
                                    ^
t3.cpp:472:51: style: The scope of the variable 'contbai' can be reduced. [variableScope]
                unsigned int j = 0, contcima = 0, contbai = 0;
                                                  ^
t3.cpp:472:32: style: Variable 'j' is assigned a value that is never used. [unreadVariable]
                unsigned int j = 0, contcima = 0, contbai = 0;
                               ^
t3.cpp:546:0: style: The function 'legenda' is never used. [unusedFunction]

^
t3.cpp:62:0: style: The function 'remove' is never used. [unusedFunction]

^
t3.cpp:68:0: style: The function 'tamanho' is never used. [unusedFunction]

^
